--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -287,7 +287,7 @@
                                     }
                                 } else {
                                     item.freq = '雙周一次';
-                                    for (var i = 0; i <= 56; i += 14) {
+                                    for (var i = 0; i < 56; i += 14) {
                                         var date3 = new Date(myshippingDate);
                                         date3.setDate(date3.getDate() + i);
                                         var myshippingDate3 = (date3.getMonth() + 1) + '/' + date3.getDate();
